cleaning existed code